[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "warden"
version = "0.1.0"
description = "Auditor de host y panel de sistemas para terminal. Linux primero."
authors = [{ name = "Israel Zamora Tejero" }]
requires-python = ">=3.11"
dependencies = [
    "psutil>=5.9",
    "rich>=13",
    "typer>=0.12",
    "distro>=1.9",
]

[project.scripts]
warden = "warden.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["warden"]
